--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,24 +1,22 @@
+
 .header{
     min-height: 60px;
     background-color: darkred;
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 30px;
-
-}
-.header a {
-    font-size: 25px;
-    color: aliceblue;
-    text-decoration: none;
-}
-
-.header a[class='active']{
-    text-decoration: underline;
-    color: indianred;
+    width: 100%;
 }
 
 .outlet {
-    width: 95%;
     margin: 0 auto;
+}
+
+.header img{
+    width: 100px;
+    height: 100px;
+}
+
+.search {
+    margin-left: 35%;
 }
